# WWPP_Calculator

./: .directory  CMakeLists.txt  WWPP_Calculator.cpp  WWPP_Calculator.h  WWPP_Calculator.kdev4  main.cpp  wwpp_calculatorui.rc
.kdev4/: WWPP_Calculator.kdev4
